--- a/mpl-backend/.env
+++ b/mpl-backend/.env
@@ -6,9 +6,9 @@
 #DB_NAME=supersa2_mpl_db
 
 DB_HOST=localhost
-DB_USER=mpl_dbadmin
-DB_PASSWORD=Mpl@2025
-DB_NAME=mpl_db
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=cric
 
 # --- Server Configuration ---
 PORT=5000
