--- a/mpl-backend/.env
+++ b/mpl-backend/.env
@@ -1,14 +1,19 @@
 # --- Database Configuration ---
 # Replace with your actual MySQL connection details
-DB_HOST=localhost
-DB_USER=supersa2_mpl_dbadmin
-DB_PASSWORD=Mpl@2025
-DB_NAME=supersa2_mpl_db
+# DB_HOST=localhost
+# DB_USER=supersa2_mpl_dbadmin
+# DB_PASSWORD=Mpl@2025
+# DB_NAME=supersa2_mpl_db
 
 #DB_HOST=localhost
 #DB_USER=mpl_dbadmin
 #DB_PASSWORD=Mpl@2025
 #DB_NAME=mpl_db
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=cric
 
 # --- Server Configuration ---
 #PORT=5000
@@ -16,7 +21,7 @@ DB_NAME=supersa2_mpl_db
 # --- Security ---
 # IMPORTANT: Generate a strong, unique secret key for JWT!
 # Example command (run in terminal): node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
-#JWT_SECRET=Mpl@2025
+JWT_SECRET=Mpl@2025
 
 # --- Frontend URL ---
 # The URL where your React frontend is running (used for CORS and Socket.IO)
