--- a/mpl-backend/.env
+++ b/mpl-backend/.env
@@ -11,12 +11,12 @@ DB_NAME=supersa2_mpl_db
 #DB_NAME=mpl_db
 
 # --- Server Configuration ---
-#PORT=5000
+PORT=5000
 
 # --- Security ---
 # IMPORTANT: Generate a strong, unique secret key for JWT!
 # Example command (run in terminal): node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
-#JWT_SECRET=Mpl@2025
+JWT_SECRET=Mpl@2025
 
 # --- Frontend URL ---
 # The URL where your React frontend is running (used for CORS and Socket.IO)
