--- a/mpl-backend/.env
+++ b/mpl-backend/.env
@@ -1,19 +1,15 @@
 # --- Database Configuration ---
 # Replace with your actual MySQL connection details
-# DB_HOST=localhost
-# DB_USER=supersa2_mpl_dbadmin
-# DB_PASSWORD=Mpl@2025
-# DB_NAME=supersa2_mpl_db
+ DB_HOST=localhost
+ DB_USER=supersa2_mpl_dbadmin
+ DB_PASSWORD=Mpl@2025
+ DB_NAME=supersa2_mpl_db
 
 #DB_HOST=localhost
 #DB_USER=mpl_dbadmin
 #DB_PASSWORD=Mpl@2025
 #DB_NAME=mpl_db
 
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=cric
 
 # --- Server Configuration ---
 PORT=5000
