--- a/mpl-backend/.env
+++ b/mpl-backend/.env
@@ -5,15 +5,10 @@
 # DB_PASSWORD=Mpl@2025
 # DB_NAME=supersa2_mpl_db
 
-#DB_HOST=localhost
-#DB_USER=mpl_dbadmin
-#DB_PASSWORD=Mpl@2025
-#DB_NAME=mpl_db
-
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=cric
+DB_USER=mpl_dbadmin
+DB_PASSWORD=Mpl@2025
+DB_NAME=mpl_db
 
 # --- Server Configuration ---
 PORT=5000
