DB and front end and backend localhost update

--- a/mpl-backend/.env
+++ b/mpl-backend/.env
@@ -1,14 +1,8 @@
 # --- Database Configuration ---
-# Replace with your actual MySQL connection details
-# DB_HOST=localhost
-# DB_USER=supersa2_mpl_dbadmin
-# DB_PASSWORD=Mpl@2025
-# DB_NAME=supersa2_mpl_db
-
 DB_HOST=localhost
-DB_USER=mpl_dbadmin
+DB_USER=supersa2_mpl_dbadmin
 DB_PASSWORD=Mpl@2025
-DB_NAME=mpl_db
+DB_NAME=supersa2_mpl_db
 
 # --- Server Configuration ---
 PORT=5000
