--- a/mpl-backend/.env
+++ b/mpl-backend/.env
@@ -14,8 +14,9 @@ JWT_SECRET=Mpl@2025
 
 # --- Frontend URL ---
 # The URL where your React frontend is running (used for CORS and Socket.IO)
-FRONTEND_URL=http://localhost:5173
-
+# FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://mpl.supersalessoft.com
+# BACKEND_URL=https://mpl.supersalessoft.com/api
 # --- Node Environment ---
 # Set to 'production' when deploying
 # NODE_ENV=development
