--- a/mpl-backend/package.json
+++ b/mpl-backend/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "migrate:dotball": "node scripts/migrate-dotball-penalty.js"
     },
     "dependencies": {
         "bcrypt": "^5.1.0",
